Opened 16 years ago

Closed 16 years ago

#2849 closed bug (fixed)

app_server not saving settings correctly

Reported by: anevilyak Owned by: stippi
Priority: normal Milestone: R1
Component: Servers/app_server Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Suppose you do something very simple, like open Screen and change the number of workspaces. Restart, and app_server will not have actually saved this setting, it reverts back to 4. Looking at ~/config/settings, the system/app_server subdir where the settings file is supposed to be getting stored has been created, but no settings file is present. Haven't yet managed to track down why, but in case I don't determine it tonight, logging it here. I tried adding an fSettings->Save(kAllSettings); to Desktop::~Desktop() but that had no effect.

Change History (1)

comment:1 by anevilyak, 16 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev28206.

Note: See TracTickets for help on using tickets.