app_server was not storing its settings when the workspace count was changed. As a consequence this setting was lost unless another setting was also altered that affected the workspace configuration in some way. Fixes #2849.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28206 a95241bf-73f2-0310-859d-f6bbb57e9c96